Dir structure is changed.

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/templatemo-misc.css">
-    <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" href="client/css/bootstrap.css">
+    <link rel="stylesheet" href="client/css/normalize.min.css">
+    <link rel="stylesheet" href="client/css/font-awesome.min.css">
+    <link rel="stylesheet" href="client/css/animate.css">
+    <link rel="stylesheet" href="client/css/templatemo-misc.css">
+    <link rel="stylesheet" href="client/css/templatemo-style.css">
 
   </head>
   <body>
@@ -48,7 +48,7 @@
               
     </div> <!-- /.content-section -->
 
-    <script type="text/javascript" src="dist/index_bundle.js"></script>   
+    <script type="text/javascript" src="client/dist/index_bundle.js"></script>   
 
   </body>
 </html>
